# openrouter-crew-platform

./: .env.production  .gitignore  API_REFERENCE_PHASE_3.md  COMMERCIAL_ANALYSIS.md  DDD_ARCHITECTURE.md  DDD_MIGRATION_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS.md  DEV_DEPLOYMENT_GUIDE_20260203_1234.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_PLAN.md  KNOWN_ISSUES.md  LOCAL_DEVELOPMENT_GUIDE.md  OPTIMIZATION_GUIDE.md  PACKAGES_SUMMARY.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETE.md  PHASE_3_PLAN.md  PHASE_3_SPRINT_3_COMPLETION.md  PHASE_3_SPRINT_4_PLAN.md  PHASE_3_SPRINT_STATUS.md  PHASE_6_COMPLETION.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_7_PROJECT_CREATION_TEST.md  PHASE_8A_COMPLETION.md  PHASE_8B_COMPLETION.md  PHASE_8C_COMPLETION.md  PHASE_8D_COMPLETION.md  PHASE_8E_COMPLETION.md  PHASE_8F_COMPLETION.md  PHASE_8G_COMPLETION.md  PHASE_8H_COMPLETION.md  PHASE_8I_COMPLETION.md  PHASE_8J_COMPLETION.md  PHASE_8_FINAL_SUMMARY.md  PHASE_8_IMPLEMENTATION_PLAN.md  PHASE_8_PROGRESS_SUMMARY.md  (+28 more)
.claude/: settings.local.json
.milestones/: milestone-scripts-active-02-02-26-14.md  n8n-sync-testing-20260202-174026.md  n8n-sync-testing-20260202-174222.md  (+5 more)
domains/dj-booking/agents/rag-refresh-product-factory/: CREW_WEBHOOKS_COMPLETE 2.md  STATUS_CREW_WEBHOOKS.md  apply_migration_simple.py  next.config.js  package-lock.json  pyproject.toml
domains/dj-booking/agents/rag-refresh-product-factory/app/: globals.css
domains/dj-booking/agents/rag-refresh-product-factory/app/api/crew/collaborate/: route.ts
(+1015 files in other folders)
